ReminderApp/ReminderApp/obj/x64/Release/ReminderApp.log
  Validating architecture
  Validating sources
  Copying sources remotely to 'localhost'
  Starting remote build
  Compiling sources:
  main.cpp
  /home/neo/projects/ReminderApp/main.cpp:2:22: fatal error: picojson.h: No such file or directory
   #include "picojson.h"
                        ^
  compilation terminated.
  
C:\Users\H.Moriguchi\Source\Repos\ReminderApp\ReminderApp\main.cpp(2,22): error : picojson.h: No such file or directory
